--- a/templates/index.html
+++ b/templates/index.html
@@ -489,7 +489,7 @@
 						</p>
 
 						<span class="s-text9">
-							Photo by @nancyward
+							Photo by @businesslogics
 						</span>
 					</div>
 				</a>
@@ -511,7 +511,7 @@
 						</p>
 
 						<span class="s-text9">
-							Photo by @nancyward
+							Photo by @businesslogics
 						</span>
 					</div>
 				</a>
@@ -533,7 +533,7 @@
 						</p>
 
 						<span class="s-text9">
-							Photo by @nancyward
+							Photo by @businesslogics
 						</span>
 					</div>
 				</a>
@@ -555,7 +555,7 @@
 						</p>
 
 						<span class="s-text9">
-							Photo by @nancyward
+							Photo by @businesslogics
 						</span>
 					</div>
 				</a>
@@ -577,7 +577,7 @@
 						</p>
 
 						<span class="s-text9">
-							Photo by @nancyward
+							Photo by @businesslogics
 						</span>
 					</div>
 				</a>
@@ -631,8 +631,7 @@
 
       <div>
         <p class="s-text7 w-size27">
-          Any questions? Let us know in store at 8th floor, 379 Hudson St, New
-          York, NY 10018 or call us on (+1) 96 716 6879
+          Any questions? Let us know @businesslogics
         </p>
 
         <div class="flex-m p-t-30">
